# omegalul

./: .gitignore  omegalul.py  pyproject.toml  readme.md  setup.cfg  setup.py
src/omegalul/: __init__.py
