[metadata]
name = omegalul
version = 0.0.1
author = pcranaway
author_email = pcranaway@tuta.io
description = A Python library for building omegle clients
url = https://github.com/pcranaway/omegalul
classifiers =
  Programming Language :: Python :: 3

[options]
package_dir =
  = src
packages = find:
python_requires = >=3.7

[options.packages.find]
where = src
