[metadata]
name = omegalul
version = 0.0.3
author = pcranaway
author_email = pcranaway@tuta.io
description = A Python library for building omegle clients
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/pcranaway/omegalul
classifiers =
  Programming Language :: Python :: 3

[options]
package_dir =
  = src
packages = find:
python_requires = >=3.7

[options.packages.find]
where = src
